kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-web-service
  labels:
    app: ml-web-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ml-web-service
  template:
    metadata:
      labels:
        app: ml-web-service
    spec:
      containers:
      - name: ml-web-service
        image: murradasgheddi123/ml-web-service:latest
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
