kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-web-service
spec:
  selector:
    app: ml-web-service
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
